add auth and bearer token to student get api only
